charts/templates/app.yaml
apiVersion: v1
kind: Service
metadata:
  name: id
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      name: id
  selector:
    app: id
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: id
  annotations:
    secrets.infisical.com/auto-reload: 'true'
  labels:
    app: id
spec:
  selector:
    matchLabels:
      app: id
  template:
    metadata:
      labels:
        app: id
    spec:
      enableServiceLinks: false
      containers:
        - name: id
          image: ghcr.io/byulmaru/id
          resources:
            requests:
              cpu: '100m'
              memory: '256Mi'
            limits:
              cpu: '500m'
              memory: '1Gi'
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              preference:
                matchExpressions:
                  - key: oci.oraclecloud.com/oke-is-preemptible
                    operator: Exists
                    values: []
      tolerations:
        - key: 'oci.oraclecloud.com/oke-is-preemptible'
          operator: 'Equal'
          value: 'present'
          effect: 'NoSchedule'
      priorityClassName: preemptible
