charts/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - byulmaru.co
      secretName: certificate
  rules:
    - host: byulmaru.co
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: byulmaru-co
                port:
                  number: 8080
